<resources>
    <string name="app_name">iFormula</string>
    <string name="app_mate">Matemáticas</string>
    <string name="box">%1$d</string>
    <string name="advanced_score">%1$d of %2$d</string>
    <string name="square">%1$d\u00B2</string>
    <string name="cube">%1$d\u00B3</string>
    <string name="sqrt">\u221A%1$d</string>
    <string name="cbrt">\u221B%1$d</string>
    <string name="triple_sum">%1$d + %2$d + %3$d</string>
    <string name="triple_sum_multiply">(%1$d + %2$d) x %3$d</string>
    <string name="triple_sub_multiply">(%1$d - %2$d) x %3$d</string>
    <string name="triple_sum_div">(%1$d + %2$d) / %3$d</string>
    <string name="triple_sub_div">(%1$d - %2$d) / %3$d</string>
    <string name="triple_sub">%1$d - %2$d - %3$d</string>
    <string name="slide_1_titulo">Matemáticas, Física y más</string>
    <string name="slide_1_desc"> Las principale </string>
    <string name="slide_2_titulo">Personajes Relevantes y aportaciones</string>
    <string name="slide_2_desc"> Aquellos cientificos, matematicos , filosofos e inventores de algunas herramientas que hoy en dia conocemos.</string>
    <string name="slide_3_titulo">Interfaz amigable y intuitiva</string>
    <string name="slide_3_desc">Aqui dfqwerwquna pinshe prueba aver como sale esta madre espero y si funcione alv </string>
    <string name="slide_4_titulo">Todas las formulas en un aplicación</string>
    <string name="slide_4_desc">kyc gei</string>
    <string name="my_preference">"com.abc.com.Mypref"</string>
    <string name="my_preference_key">"com.abc.com.MyprefKey"</string>
    <string name="menu_principal">Menú Principal</string>
    <string name="descripcion">Principales ciencias que estudian las propiedades de la materia y establecen las leyes
que explican los fenómenos naturales. </string>
    <string name="encabezado">Herramientas que permiten conocer más a fondo las diversas ciencias estudiadas.</string>
    <string name="quimica">Ciencia que estudia la composición y las propiedades de la materia y de las transformaciones que esta experimenta sin que se alteren los elementos que la forman.</string>
    <string name="convertidor_descripcion"> La conversión de unidades es la transformación del valor numérico de una magnitud física y expresado en otra unidad de medida de la misma naturaleza.</string>
    <string name="texto">La matemática es la ciencia deductiva que se dedica al estudio de las propiedades de los entes abstractos y de sus relaciones. Esto quiere decir que las matemáticas trabajan con números, símbolos, figuras geométricas, etc.</string>
    <string name="calculo">Se ocupa del estudio de los incrementos en las variables, pendientes de curvas, valores máximo y mínimo de funciones y de la determinación de longitudes, áreas y volúmenes. Se usa sobre todo en ciencias como las ingenierías.</string>
    <string name="fisica">La física se encarga de analizar las características de la energía, el tiempo y la materia, así como también los vínculos que se establecen entre ellos.</string>
    <string name="area_km2">Kilómetro cuadrado</string>
    <string name="area_mt2">Metro cuadrado</string>
    <string name="area_mill2">Square mile</string>
    <string name="area_ya2">Yarda cuadrada</string>
    <string name="area_pie2">Pie cuadrado</string>
    <string name="area_pulg2">Pulgada cuadrada</string>
    <string name="area_ha">Hectárea (ha)</string>
    <string name="area_acre">Acre</string>
    <string name="cons_titu">Consumo de combustible</string>
    <string name="cons_km">Kilómetro por litro</string>
    <string name="cons_mill">Milla por galón americano</string>
    <string name="cons_mill_impe">Milla por galón (Imperial)</string>
    <string name="ene_titu">Energía</string>
    <string name="ene_juli">Julio</string>
    <string name="ene_kiloju">Kilojoule</string>
    <string name="ene_kiloca">Kilocaloría</string>
    <string name="ene_vatioHora">Vatio-hora</string>
    <string name="ene_kilovatio">Kilovatio-hora</string>
    <string name="ene_btu">BTU</string>
    <string name="Electricidad">Electricidad y Magnetismo</string>
    <string name="Geometría">Geometría</string>
    <string name="fre_titu">Frecuencia</string>
    <string name="fre_mega">Megahercios (MHz)</string>
    <string name="fre_herzio">Hercios (Hz)</string>
    <string name="fre_kilo">Kilohertz (kHz)</string>
    <string name="fre_giga">Gigahercios (GHz)</string>
    <string name="lon_titu">Longitud</string>
    <string name="lon_km">Kilómetro (Km)</string>
    <string name="lon_me">Metro (m)</string>
    <string name="lon_cen">Centímetro (cm)</string>
    <string name="lon_milim">Milímetro (mm)</string>
    <string name="lon_deci">Decímetro (dm)</string>
    <string name="lon_milla">Milla (mi)</string>
    <string name="lon_yarda">Yarda (yd)</string>
    <string name="lon_pulga">Pulgada (pulg)</string>
    <string name="lon_pie">Pie (´)</string>
    <string name="como_funciona">JUEGOS</string>
    <string name="iniciar">INICIAR</string>
    <string name="masa_titu">Masa</string>
    <string name="masa_ton">Tonelada (t)</string>
    <string name="masa_kg">Kilogramo (kg)</string>
    <string name="masa_gra">Gramo (g)</string>
    <string name="masa_quila">Quilate</string>
    <string name="masa_milig">Miligramo (mg)</string>
    <string name="masa_stone">Stone (st)</string>
    <string name="masa_libra">Libra (lb)</string>
    <string name="masa_onza">Onza</string>
    <string name="ang_titul">Ángulo plano</string>
    <string name="ang_gracen">Grado centesimal (gon)</string>
    <string name="ang_grasex">Grado sexagesimal</string>
    <string name="ang_mil">Mil angular</string>
    <string name="ang_minutoArco">Minuto de arco (arcmin)</string>
    <string name="ang_Radian">Radián</string>
    <string name="ang_segundoSexa">Segundo sexagesimal</string>
    <string name="pres_titu">Presión</string>
    <string name="pres_atmos">Atmósfera (atm)</string>
    <string name="pres_bar">Bar</string>
    <string name="pres_megapas">Megapascal (MPa)</string>
    <string name="pres_pasc">Pascal (Pa)</string>
    <string name="pres_kilo">Kilopascal (kPa)</string>
    <string name="pres_mili">Milibar</string>
    <string name="pres_torr">Torr (torr)</string>
    <string name="probabilidad">Probabilidad y Estadística</string>
    <string name="res_titu">Resistencia eléctrica</string>
    <string name="res_milio">Miliohmios (mΩ)</string>
    <string name="res_ohmnio">Ohmios (Ω)</string>
    <string name="res_kilo">Kiloohmios (kΩ)</string>
    <string name="res_mega">Megaohmios (MΩ)</string>
    <string name="res_abo">Abohmios (abΩ)</string>
    <string name="res_voltio">Voltios por amperios (V/A)</string>
    <string name="Tempera">Temperatura</string>
    <string name="Menu">MENÚ</string>
    <string name="conve">CONVERTIDOR</string>
    <string name="herra">HERRAMIENTA</string>
    <string name="inic">INICIAR</string>
    <string name="sig">SIGUIENTE</string>
    <string name="omit">OMITIR</string>
    <string name="tabla_peri">Tabla periódica</string>
    <string name="alfabeto_griego">Alfabeto griego</string>
    <string name="calcular_area">Calcular área y volúmenes</string>
    <string name="constantes_universale">Constantes universales</string>
    <string name="mate">Matemáticas</string>
    <string name="quimi">Química</string>
    <string name="calcul">Cálculo</string>
    <string name="fisic">Física</string>
    <string name="tiempo_titu">Tiempo</string>
    <string name="tiemp_deca">Decada</string>
    <string name="tiemp_año">Año</string>
    <string name="tiemp_mes">Mes</string>
    <string name="tiemp_semana">Semana</string>
    <string name="tiemp_dia">Día</string>
    <string name="tiemp_hora">Hora (hr)</string>
    <string name="tiemp_minu">Minuto (min)</string>
    <string name="tiemp_seg">Segundo (s)</string>
    <string name="velo_titu">Velocidad</string>
    <string name="velo_millaxh">Milla por hora (mph/h)</string>
    <string name="velo_piexseg">Pie por segundo (ft/s)</string>
    <string name="velo_metroxseg">Metro por segundo (m/s)</string>
    <string name="velo_kiloxhora">Kilómetro por hora (km/h)</string>
    <string name="velo_nudo">Nudo</string>
    <string name="area">Área</string>
    <string name="vol_titu">Volumen</string>
    <string name="vol_litro">Litro (l)</string>
    <string name="vol_milimetro">Milimetro (ml)</string>
    <string name="vol_galon">Galón (gal)-US</string>
    <string name="vol_metro3">Metro Cúbico (m³)</string>
    <string name="vol_pie3">Pie Cúbico (ft³)</string>
    <string name="vol_pulgada3">Pulgada Cúbica</string>
    <string name="vol_cuartogalo">Cuarto de Galón</string>
    <string name="vol_pinta">Pinta (pt)-US</string>
    <string name="arit">ARITMÉTICA</string>
    <string name="geometria">GEOMETRÍA ANALÍTICA</string>
    <string name="algebra">ÁLGEBRA</string>
    <string name="trigonometria">TRIGONOMETRÍA</string>
    <string name="matriz_simetrica">Matriz Simétrica y Antisimétrica</string>
    <string name="binomio_newton">Binomio de Newton</string>
    <string name="formula_general">Formula General</string>
    <string name="submit">ENTER</string>
    <string name="defaultNum">0</string>
    <string name="clear">LIMPIAR</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="detalles">Más detalles</string>
    <string name="Sbinomio">El binomio de Newton es un algoritmo que permite calcular una potencia cualquiera de un binomio, para ello se emplean los coeficientes binomiales, que no son más que una sucesión de números combinatorios.</string>
    <string name="Sbin2">Los números combinatorios que aparecen en la fórmula son precisamente los llamados coeficientes binomiales.</string>
    <string name="Sform">La fórmula general o cuadrática nos sirve para resolver ecuaciones cuadráticas. Con ella es
muy fácil encontrar la solución.</string>
    <string name="Sform2">Recuerda que la ecuacion siempre debe estar igualada a 0. En caso contrario, debes despejarla.</string>
    <string name="msimetrica">Sea A una matriz cuadrada de dimensión mxm. Entonces, A es simétrica si igual a su matriz traspuesta A^T, es decir, si A = A^T.
</string>
    <string name="sime2">Propiedades de las matrices simétricas:
</string>
    <string name="sime3">-La inversa de una matriz simétrica regular es simétrica.
\n-La matriz adjunta de una matriz simétrica es también simétrica.
\n-La suma de matrices simétricas es una matriz simétrica. El producto lo es si, y sólo si, también es conmutativo.</string>
    <string name="repreCiclo">Representación Gráfica de los Cicloalcanos:\n
Los Cicloalcanos se suelen representar mediante polígonos sencillos. En cada vértice se entiende que existe un átomo de carbono con dos hidrógenos:</string>
    <string name="cicloalcanos">Los Cicloalcanos (también llamados Alicíclicos o Alcanos Cíclicos) son compuestos orgánicos pertenecientes al grupo de los Hidrocarburos, es decir, que están formados únicamente por átomos de carbono e hidrógeno.</string>
    <string name="nomeCiclo">Nomenclatura de los Cicloalcanos:\n\n
▪Se nombran como los alcanos de igual número de carbonos pero añadiendo el prefijo "Ciclo-":
Ciclopropano, ciclobutano, ciclopentano, ciclohexano, cicloheptano...\n
▪Si poseen un radical se toma el nombre del ciclo como la cadena principal:</string>
    <string name="Cicloalcanos">Cicloalcanos</string>
    <string name="nomeCiclo20">▪Si poseen varios radicales ramificadas se toma el nombre del ciclo como la cadena principal:\n
*Se toma el nombre de la cadena que las forma\n
*Sus posiciones se señalan con números\n
*Se numeran en el sentido de las agujas del reloj o al revés de manera que resulte la combinación de números más bajos </string>
</resources>