<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".Matematicas_children.AlgebraLineal_children.matrizSimetrica_children">

     <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/matriz_simetrica"
        app:titleTextColor="@android:color/white">

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/my_toolbar"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/simetricaa"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/matriz_simetricayno"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimaryDark"
                android:textSize="18dp"
                android:padding="10dp"
android:text="@string/msimetrica"                ></TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:id="@+id/matrizs"
                android:src="@drawable/matriz_simetrica"
></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"

            android:text="@string/sime2"
                ></TextView> <TextView
            android:layout_width="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
             android:layout_marginLeft="15dp"
android:text="@string/sime3"
            ></TextView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>