<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"

    android:layout_height="match_parent"
    tools:context=".Matematicas_children.Algebra_children.binomioNewton_children">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/binomio_newton"
        app:titleTextColor="@android:color/white">

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/my_toolbar"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/binomio_zoom"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/newton">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:textSize="17dp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="10dp"

android:text="@string/Sbinomio"
                ></TextView>
<TextView
    android:layout_width="wrap_content"
    android:layout_marginTop="30dp"
    android:textSize="17dp"
    android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"

android:text="@string/Sbin2"
    android:layout_height="wrap_content"
></TextView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>