<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".Matematicas_children.Algebra_children.formulaGeneral_children">

     <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/formula_general"
        app:titleTextColor="@android:color/white">

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/my_toolbar"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView

                android:id="@+id/formulagral_zoom"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/formula_gral"></ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimaryDark"
                android:textSize="17dp"
                android:padding="10dp"
                android:text="@string/Sform"
                ></TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:adjustViewBounds="true"
                android:id="@+id/formulagral_zoom2"
                android:src="@drawable/ecuacion_cuadra"></ImageView>

            <TextView
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

android:text="@string/Sform2"                ></TextView>
            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"></TextView>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detalles"
                android:textColor="@android:color/white"
                android:layout_margin="30dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorGreen1"
                android:foreground="?selectableItemBackground"
                android:clickable="true"
                android:background="@drawable/btn_redondo"
                android:id="@+id/gral_detalles"
                android:layout_marginTop="30dp"
                android:textSize="15dp"
                ></Button>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>